--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -1,24 +1,73 @@
-.testContainer{
+.testContainer {
     display: flex;
     flex-direction: column;
     gap: 106.67px;
     padding: 149.333px 85.333px;
+    background-color: #F5FCFF;
 }
-.testupper{
+
+.testupper {
     display: flex;
     flex-direction: column;
     gap: 21.33px;
 }
-.upper1{
+
+.upper1 {
     font-size: 16px;
     font-weight: 600;
 }
-.upper2{
+
+.upper2 {
     font-size: 48px;
     font-weight: 700;
 }
-.testlower{
+
+.testlower {
     display: flex;
     gap: 42.67px;
     align-items: flex-start;
+}
+
+.reviewcard {
+    display: flex;
+    padding: 42.67px;
+    flex-direction: column;
+    gap: 42.67px;
+    border-radius: 8px;
+    border: 1.333px solid #006B6A;
+
+}
+
+.avatar {
+    display: flex;
+    align-items: center;
+    gap: 21.333px;
+
+}
+
+.av2 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.name {
+    font-size: 21.33px;
+    font-weight: 600;
+}
+
+.work {
+    font-size: 21.33px;
+    font-weight: 400;
+}
+
+.av {
+    width: 74.667px;
+    height: 74.667px;
+
+}
+
+.stars {
+    display: flex;
+    gap: 5.333px;
 }
