--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -19,15 +19,16 @@
 .link{
     color: #1C1E53;
     cursor: pointer;
+    text-decoration: none;
 }
 .link:hover{
     color: #5E3BEE;
 }
 .contactButton{
+    text-decoration: none;
     border: 1px solid #5E3BEE;
     outline: none;
     color: #5E3BEE;
-    width: 170.667px;
     padding: 18.667px 42.667px;
     cursor: pointer;
     border-radius: 5.333px;
