--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,4 @@
-.navbar{
+.navbar {
     padding: 0px 85.33px;
     display: flex;
     justify-content: space-between;
@@ -8,33 +8,44 @@
     height: 120px;
     box-shadow: 0px 5.33333px 80px 0px rgba(0, 0, 0, 0.10);
 }
-.logo{
+
+.logo {
     height: 40px;
     width: 186.667px;
 }
-.nav{
+
+.nav {
     display: flex;
     gap: 42.667px;
 }
-.link{
+
+.link {
     color: #1C1E53;
     cursor: pointer;
     text-decoration: none;
 }
-.link:hover{
+
+.link:hover {
     color: #5E3BEE;
 }
-.contactButton{
+.buttons{
+    display: flex;
+    gap: 10.667px;
+}
+.contactButton {
     text-decoration: none;
-    border: 1px solid #5E3BEE;
-    outline: none;
-    color: #5E3BEE;
+    display: flex;
+    width: 82.667px;
     padding: 18.667px 42.667px;
-    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    gap: 10.667px;
     border-radius: 5.333px;
-    background-color: white;
+    border: 1.333px solid var(--Primary, #5E3BEE);
+    color: #5E3BEE;
 }
-.contactButton:hover{
+
+.contactButton:hover {
     background-color: #5E3BEE;
     color: white;
 }
